<resources>
    <string name="app_name">ElinkHealthRingSDK</string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="device_name">Device Name</string>
    <string name="connect_device">Connect</string>
    <string name="disconnect_device">Disconnect</string>
    <string name="query_device_status">Query Device Status</string>
    <string name="query_checkup_duration">Query Check Duration</string>
    <string name="sensor_version">Sensor Version</string>
    <string name="checkup_type">Checkup Type</string>
    <string name="auto_checkup_state">Auto Checkup State</string>
    <string name="open_auto_checkup">Turn On Auto Checkup</string>
    <string name="close_auto_checkup">Turn Off Auto Checkup</string>
    <string name="set_checkup_duration">Set Checkup Duration</string>
    <string name="set_checkup_type">Set Checkup Type</string>
    <string name="get_history">Get History</string>
    <string name="get_next">Get Nex</string>
    <string name="get_over">Get Over</string>
    <string name="delete_history">Delete History</string>
    <string name="start_checkup">Start Checkup</string>
    <string name="stop_checkup">Stop Checkup</string>
    <string name="sync_time">Sync Time</string>
    <string name="sensor_ota">Sensor OTA</string>
    <string name="ble_ota">BLE OTA</string>
    <string name="clear_log">Clear Log</string>
    <string name="checkup_realtime_data">Realtime Data</string>
    <string name="checkup_history_data">History Data</string>
    <string name="device_status">Device Status</string>
    <string name="checkup_packets">Checkup Packets</string>
    <string name="checkup_duration">Checkup Duration</string>
    <string name="history_generated">History Generated</string>
    <string name="time_minutes">min</string>
    <string name="select_sensor_ota_file">Select Sensor OTA File</string>
    <string name="select_ble_ota_file">Select BLE OTA File</string>
    <string name="checkup_type_complex">Comprehensive</string>
    <string name="checkup_type_fast">Fast</string>
    <string name="ble_firmware_version">Firmware Version</string>
    <string name="ble_open">Bluetooth is on</string>
    <string name="ble_close">Bluetooth is off</string>
    <string name="connecting">Connecting</string>
    <string name="connect_success">Connected</string>
    <string name="disconnect">Disconnected</string>
    <string name="services_discovered">Services discovered</string>
    <string name="sync_ble_time">Synchronize Bluetooth system time</string>
    <string name="query_sleep_step_duration">Query sleep/step detection period</string>
    <string name="set_sleep_step_duration">Set the sleep/step detection period</string>
    <string name="sleep_step_duration">Sleep/step detection period</string>
    <string name="query_sleep_check_state">Query sleep check status</string>
    <string name="sleep_check_state">Sleep check state</string>
    <string name="open_sleep_check">Open sleep detection</string>
    <string name="close_sleep_check">Close sleep check</string>
    <string name="query_step_check_state">Query step detection status</string>
    <string name="open_step_check">Open step detection</string>
    <string name="close_step_check">Close step detection</string>
    <string name="step_check_state">Step detection status</string>
    <string name="sleep_step_history_data">Sleep/step history data</string>
    <string name="sleep_step_history_generated">Sleep/step history data generated</string>
    <string name="get_sleep_step_history">Get sleep/step history data</string>
    <string name="get_next_sleep_step_history">Get the next page of sleep/step history data</string>
    <string name="get_over_sleep_step_history">Getting sleep/step history data ends</string>
    <string name="delete_sleep_step_history">Delete sleep/step history data</string>
    <string name="check_state_open">Open</string>
    <string name="check_state_close">Close</string>
</resources>